@@ -1,6 +1,5 @@
  * Support scaling for split boards
  * check movements
- * support adjusted scores (will then support split adjusted scores)
  * Support fines
  * gsalliere
    - save button
