@@ -1,6 +1,8 @@
 Version 0.4:
 
 	* Support averages
+	* Support assigned/ajusted/split scores
+	* forcing score supported in GSalliere
 
 Version 0.3:
 
